Resolves: tdf#100258 crash on disposing media player

SfxDockingWindow::dispose() will call SetFloatingMode false
its floating, which recreates the mpMediaWindow and so
the assert occurs about living children.

So toggle out of floating mode before deleting mpMediaWindow
to avoid that

(cherry picked from commit ec2425ad5fb39df5ad952b27d49e172fdd7ff00d)
(cherry picked from commit 53d6094bd1337580dcd1c449f2bb696f03afb621)

Change-Id: I0b1cae149261fa43611b9f9a39465ce718e33484
Reviewed-on: https://gerrit.libreoffice.org/26019
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
(cherry picked from commit 14a0b4a0883eb960896bd213c41e28957f1cda3c)