avmedia/source/framework/mediaplayer.cxx
@@ -79,12 +79,15 @@ MediaFloater::~MediaFloater()
 
 void MediaFloater::dispose()
 {
+    if (IsFloatingMode())
+    {
+        Show(false, ShowFlags::NoFocusChange);
+        SetFloatingMode(false);
+    }
     delete mpMediaWindow;
     mpMediaWindow = nullptr;
     SfxDockingWindow::dispose();
 }
-
-
 
 void MediaFloater::Resize()
 {
@@ -93,8 +96,6 @@ void MediaFloater::Resize()
     if( mpMediaWindow )
         mpMediaWindow->setPosSize( Rectangle( Point(), GetOutputSizePixel() ) );
 }
-
-
 
 void MediaFloater::ToggleFloatingMode()
 {
